# RS_J

./: build.bat  build.sh  run.bat  run.sh
java/: pom.xml  run.bat
java/src/main/java/net/totobirdcreations/robot/: Link.java  Main.java  RsHelper.java  Rust.java
java/src/main/java/net/totobirdcreations/robot/rust/: ConvHelper.java  J2RS.java  RS2J.java  TestObject.java
java/src/main/java/net/totobirdcreations/robot/test/: InputData.java  Test.java
javawithrust/: Cargo.toml
javawithrust/javawithrust_macro/: Cargo.toml
javawithrust/javawithrust_macro/src/: lib.rs
javawithrust/src/: lib.rs
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/java/: input_data.rs  j2rs.rs  mod.rs  rs2j.rs  test.rs  test_object.rs
