[package]
name    = "javawithrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "javawithrust_macro"
]

[dependencies.javawithrust_macro]
path = "./javawithrust_macro"

[dependencies]
j4rs        = "0.13"
j4rs_derive = "0.1"
paste       = "1.0"

[dependencies.serde]
version  = "1.0"
features = [
    "derive"
]