[package]
name    = "robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]

[dependencies]
j4rs        = "0.13"
j4rs_derive = "0.1"

[dependencies.serde]
version  = "1.0"
features = [
    "derive"
]
