[package]
name    = "robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.javawithrust]
path = "../javawithrust/"

[dependencies.serde]
version  = "1.0"
features = [
    "derive"
]

[lib]
crate_type = ["cdylib"]
